force-app/main/default/objects/CLQ_OCLQS_Configuration__c/CLQ_OCLQS_Configuration__c.object-meta.xml
<CustomObject>
    <description>This object will be used to set configuration needs for OCLQS per type of program.</description>
    <label>OCLQS Configuration</label>
    <nameField>
        <label>OCLQS Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCLQS Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>