force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/CLQ_Admin_Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Admin_Queue_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Queue Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OCLQS_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>