force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/CLQ_Change_of_Location_Fee__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Change_of_Location_Fee__c</fullName>
    <label>Change of Location Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>