force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/CLQ_JFS_County_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>CLQ_JFS_County_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JFS County Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OCLQS_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>