force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/CLQ_New_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>CLQ_New_Application_Fee__c</fullName>
    <label>New Application Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>