force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/CLQ_ODE_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ODE_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ODE Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OCLQS_Configurations2</relationshipName>
    <type>Lookup</type>
</CustomField>