force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Type of programs</description>
    <label>Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Out Of State</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>FCC - Type A Home</fullName>
            </value>
            <value>
                <fullName>FCC - Type B Home</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Out of State Registration</fullName>
            </value>
            <value>
                <fullName>Pre School</fullName>
            </value>
            <value>
                <fullName>School Age Child Care</fullName>
            </value>
            <value>
                <fullName>CC Center</fullName>
                <isActive>false</isActive>
                <label>CC Center</label>
            </value>
            <value>
                <fullName>FCC Type A</fullName>
                <isActive>false</isActive>
                <label>FCC Type A</label>
            </value>
            <value>
                <fullName>FCC Type B</fullName>
                <isActive>false</isActive>
                <label>FCC Type B</label>
            </value>
            <value>
                <fullName>In Home Aide</fullName>
                <isActive>false</isActive>
                <label>In Home Aide</label>
            </value>
            <value>
                <fullName>ODE - Pre School</fullName>
                <isActive>false</isActive>
                <label>ODE - Pre School</label>
            </value>
            <value>
                <fullName>ODE - SACC</fullName>
                <isActive>false</isActive>
                <label>ODE - SACC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>