force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Value__c</fullName>
    <description>SUTQ rating values</description>
    <label>Rating Value</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>