force-app/main/default/objects/CLQ_OCLQS_Configuration__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Program transaction type</description>
    <label>Transaction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUTQ - Initial Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Ongoing Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Annual Report</fullName>
            </value>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Continuous Licensing</fullName>
            </value>
            <value>
                <fullName>License Closure</fullName>
            </value>
            <value>
                <fullName>Program Close</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Return for Revision</fullName>
            </value>
            <value>
                <fullName>Remove After Approved</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>System Deleted</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Registration Assigned</fullName>
            </value>
            <value>
                <fullName>Supervisor Desk Review</fullName>
            </value>
            <value>
                <fullName>Unable To Rate</fullName>
            </value>
            <value>
                <fullName>Onsite Visit Pending</fullName>
            </value>
            <value>
                <fullName>Rating Recommended for Review</fullName>
            </value>
            <value>
                <fullName>Rating Assessment Complete</fullName>
            </value>
            <value>
                <fullName>Withdrawn at Programs Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>