force-app/main/default/objects/CLQ_OCLQS_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CLQ_New_Application_Fee__c</columns>
    <columns>CLQ_Change_of_Location_Fee__c</columns>
    <columns>CLQ_Renewal_Fee__c</columns>
    <columns>CLQ_Admin_Queue_Assignment__c</columns>
    <columns>CLQ_JFS_County_Supervisor__c</columns>
    <columns>CLQ_ODE_Supervisor__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Rating_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>